--- a/ansible/playbooks/srv/all.yml
+++ b/ansible/playbooks/srv/all.yml
@@ -101,6 +101,8 @@
 
 - import_playbook: freeradius.yml
 
+- import_playbook: simplesamlphp.yml
+
 - import_playbook: tinyproxy.yml
 
 - import_playbook: libuser.yml
