--- a/ansible/roles/simplesamlphp/tasks/init_mariadb.yml
+++ b/ansible/roles/simplesamlphp/tasks/init_mariadb.yml
@@ -11,7 +11,7 @@
   register: simplesamlphp__register_mariadb_status
 
 - name: Upload database schema for WebAuthn module
-  copy:
+  copy:  # noqa no-handler
     src: 'tmp/webauthn.sql'
     dest: '/tmp/webauthn.sql'
     mode: '0644'
@@ -20,7 +20,7 @@
          simplesamlphp__register_mariadb_status is changed)
 
 - name: Create database tables for WebAuthn module
-  mysql_db:
+  mysql_db:  # noqa no-handler
     name: '{{ simplesamlphp__mariadb_database }}'
     state: 'import'
     target: '/tmp/webauthn.sql'
