[simplesamlphp] Rearrange UNIX account/group tasks
The 'main_env.yml' role tasks should only be used for Ansible
environment variables management (there are exceptions like 'php' role).
Roles that depend on UNIX environment like accounts and groups provide
separate tasks that manage this infrastructure.

--- a/ansible/roles/simplesamlphp/defaults/main.yml
+++ b/ansible/roles/simplesamlphp/defaults/main.yml
@@ -142,6 +142,9 @@ simplesamlphp__mariadb__dependent_users:
   - user: '{{ simplesamlphp__mariadb_user }}'
     password: '{{ simplesamlphp__mariadb_password }}'
     database: '{{ simplesamlphp__mariadb_database }}'
+    owner: '{{ simplesamlphp__user }}'
+    group: '{{ simplesamlphp__group }}'
+    home: '{{ simplesamlphp__home }}'
 
 simplesamlphp__nginx__dependent_servers:
 
@@ -178,3 +181,5 @@ simplesamlphp__php__dependent_pools:
     by_role: 'debops.simplesamlphp'
     user: '{{ simplesamlphp__user }}'
     group: '{{ simplesamlphp__group }}'
+    owner: '{{ simplesamlphp__user }}'
+    home: '{{ simplesamlphp__home }}'
