--- a/ansible/roles/simplesamlphp/tasks/main.yml
+++ b/ansible/roles/simplesamlphp/tasks/main.yml
@@ -17,6 +17,7 @@
   group:
     name: '{{ simplesamlphp__group }}'
     system: True
+  when: simplesamlphp__upstream|bool
 
 - name: Create system account
   user:
@@ -25,6 +26,7 @@
     system: True
     home: '{{ simplesamlphp__home }}'
     shell: '{{ simplesamlphp__shell }}'
+  when: simplesamlphp__upstream|bool
 
 - name: Download and verify SimpleSAMLphp release archive
   get_url:
