--- a/ansible/roles/simplesamlphp/tasks/main.yml
+++ b/ansible/roles/simplesamlphp/tasks/main.yml
@@ -4,6 +4,10 @@
 # Copyright (C) 2020-2021 DebOps <https://debops.org/>
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+- name: Import custom Ansible plugins
+  import_role:
+    name: 'ansible_plugins'
+
 - name: Import DebOps global handlers
   import_role:
     name: 'global_handlers'
@@ -144,6 +148,43 @@
 
 - name: Refresh host facts when needed
   meta: 'flush_handlers'
+
+- name: Manage SimpleSAMLphp configuration file diversions
+  dpkg_divert:
+    path: '{{ (item.config_path | d(simplesamlphp__config_path)) + "/" + (item.filename | d(item.name)) }}'
+    divert: '{{ (item.config_path | d(simplesamlphp__config_path)) + "/" + ((item.filename | d(item.name)) | regex_replace("\.php$", ".dpkg-divert.php")) }}'
+    state: '{{ "present" if (item.state|d("present") not in [ "absent", "ignore" ]) else "absent" }}'
+    delete: True
+  loop: '{{ q("flattened", simplesamlphp__combined_configuration) | parse_kv_items }}'
+  loop_control:
+    label: '{{ {"name": (item.filename | d(item.name)), "state": item.state|d("present") } }}'
+  when: (not simplesamlphp__upstream|bool and ansible_pkg_mgr == 'apt' and
+         item.state|d('present') not in [ 'absent', 'init', 'ignore' ] and
+         (item.divert|d())|bool)
+  tags: [ 'role::simplesamlphp:config' ]
+
+- name: Remove SimpleSAMLphp configuration files when requested
+  file:
+    path: '{{ (item.config_path | d(simplesamlphp__config_path)) + "/" + (item.filename | d(item.name)) }}'
+    state: 'absent'
+  loop: '{{ q("flattened", simplesamlphp__combined_configuration) | parse_kv_items }}'
+  loop_control:
+    label: '{{ {"name": (item.filename | d(item.name)), "state": item.state|d("present") } }}'
+  when: item.state|d('present') == 'absent' and not (item.divert|d())|bool
+  tags: [ 'role::simplesamlphp:config' ]
+
+- name: Generate SimpleSAMLphp configuration files
+  template:
+    src: 'etc/simplesamlphp/template.php.j2'
+    dest: '{{ (item.config_path | d(simplesamlphp__config_path)) + "/" + (item.filename | d(item.name)) }}'
+    owner: 'root'
+    group: '{{ simplesamlphp__group }}'
+    mode: '{{ item.mode | d("0640") }}'
+  loop: '{{ q("flattened", simplesamlphp__combined_configuration) | parse_kv_items }}'
+  loop_control:
+    label: '{{ {"name": (item.filename | d(item.name)), "state": item.state|d("present") } }}'
+  when: item.state|d('present') not in [ 'absent', 'init', 'ignore' ]
+  tags: [ 'role::simplesamlphp:config' ]
 
 - name: Remove modules with Composer
   composer:
