--- a/ansible/roles/simplesamlphp/defaults/main/authsources.yml
+++ b/ansible/roles/simplesamlphp/defaults/main/authsources.yml
@@ -384,7 +384,93 @@ simplesamlphp__original_authsources:
         state: 'comment'
 
 
-simplesamlphp__default_authsources: []
+simplesamlphp__default_authsources:
+
+  - name: 'authsources.php'
+    options:
+
+      - name: 'example-ldap'
+        comment: 'DebOps LDAP authentication source.'
+        raw: |
+          '{{ simplesamlphp__ldap_authsource_name }}' => [
+              'ldap:LDAP',
+
+              // Give the user an option to save their username for future login attempts
+              // And when enabled, what should the default be, to save the username or not
+              //'remember.username.enabled' => false,
+              //'remember.username.checked' => false,
+
+              // The hostname of the LDAP server.
+              'hostname' => '{{ simplesamlphp__ldap_server_host }}',
+
+              // Whether SSL/TLS should be used when contacting the LDAP server.
+              'enable_tls' => {{ simplesamlphp__ldap_start_tls | bool | lower }},
+
+              // Whether debug output from the LDAP library should be enabled.
+              // Default is FALSE.
+              'debug' => false,
+
+              // The timeout for accessing the LDAP server, in seconds.
+              // The default is 0, which means no timeout.
+              'timeout' => 0,
+
+              // The port used when accessing the LDAP server.
+              // The default is 389.
+              'port' => {{ simplesamlphp__ldap_server_port }},
+
+              // Set whether to follow referrals. AD Controllers may require FALSE to function.
+              'referrals' => true,
+
+              // Which attributes should be retrieved from the LDAP server.
+              // This can be an array of attribute names, or NULL, in which case
+              // all attributes are fetched.
+              'attributes' => {{ (simplesamlphp__ldap_attributes | to_json)
+                                 if simplesamlphp__ldap_attributes|d()
+                                 else "null" }},
+
+              // The pattern which should be used to create the users DN given the username.
+              // %username% in this pattern will be replaced with the users username.
+              //
+              // This option is not used if the search.enable option is set to TRUE.
+              'dnpattern' => '{{ simplesamlphp__ldap_dnpattern }}',
+
+              // As an alternative to specifying a pattern for the users DN, it is possible to
+              // search for the username in a set of attributes. This is enabled by this option.
+              'search.enable' => true,
+
+              // The DN which will be used as a base for the search.
+              // This can be a single string, in which case only that DN is searched, or an
+              // array of strings, in which case they will be searched in the order given.
+              'search.base' => '{{ simplesamlphp__ldap_people_dn | join(",") }}',
+
+              // The attribute(s) the username should match against.
+              //
+              // This is an array with one or more attribute names. Any of the attributes in
+              // the array may match the value the username.
+              'search.attributes' => {{ simplesamlphp__ldap_search_attributes | to_json }},
+
+              // Additional LDAP filters appended to the search attributes
+              'search.filter' => '{{ simplesamlphp__ldap_search_filter }}',
+
+              // The username & password the SimpleSAMLphp should bind to before searching. If
+              // this is left as NULL, no bind will be performed before searching.
+              'search.username' => '{{ simplesamlphp__ldap_binddn }}',
+              'search.password' => '{{ simplesamlphp__ldap_bindpw }}',
+
+              // If the directory uses privilege separation,
+              // the authenticated user may not be able to retrieve
+              // all required attribures, a privileged entity is required
+              // to get them. This is enabled with this option.
+              'priv.read' => false,
+
+              // The DN & password the SimpleSAMLphp should bind to before
+              // retrieving attributes. These options are required if
+              // 'priv.read' is set to TRUE.
+              'priv.username' => null,
+              'priv.password' => null,
+
+          ],
+        state: '{{ "present" if simplesamlphp__ldap_enabled|bool else "ignore" }}'
 
 simplesamlphp__authsources: []
 
