[simplesamlphp] Add account to 'ssl-cert' group
The 'ssl-cert' group presence is required to access private keys of the
X.509 certificates used for request signing.

--- a/ansible/roles/simplesamlphp/defaults/main/base.yml
+++ b/ansible/roles/simplesamlphp/defaults/main/base.yml
@@ -9,9 +9,9 @@ simplesamlphp__upstream: '{{ True
                                  [ "wheezy", "jessie", "stretch", "buster" ])
                              else False }}'
 
-simplesamlphp__base_packages: '{{ []
-                                  if simplesamlphp__upstream|bool
-                                  else [ "simplesamlphp" ] }}'
+simplesamlphp__base_packages:
+  - '{{ [] if simplesamlphp__upstream|bool else [ "simplesamlphp" ] }}'
+  - 'ssl-cert'
 
 simplesamlphp__packages: []
 
@@ -20,6 +20,8 @@ simplesamlphp__version: '{{ ansible_local.simplesamlphp.version | d("0.0.0") }}'
 simplesamlphp__user: 'simplesamlphp'
 
 simplesamlphp__group: 'simplesamlphp'
+
+simplesamlphp__additional_groups: [ 'ssl-cert' ]
 
 simplesamlphp__shell: '/usr/sbin/nologin'
 
